# bench_arrow

./: .gitignore  Cargo.toml  README.md  build.rs
3rd/clickhouse-rs/: Cargo.toml
bench-cpp/: CMakeLists.txt  main.cpp  pre_build.sh  run.sh  vcpkg.json
benches/: arrow.rs  ch-sdk.rs  channel.rs  parquet.rs
src/: channel.rs  lib.rs  main.rs
src/clickhouse_sdk/: ck_http.rs  ck_tcp.rs  grpc.rs  kk_tcp.rs  mod.rs
src/parquet/: mod.rs
src/utils/: arrow_stream_reader.rs  mod.rs
