[package]
name = "bench_crates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# arrow = "49.0.0"
# arrow2 = "0.18.0"
flume = { version = "0.11.0", default-features = false, features = ["async"] }
rand = "0.8.5"
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
clickhouse-rs = { path = "./3rd/clickhouse-rs" }
clickhouse = { version = "0.12.0", features = ["time"] }
klickhouse = "0.13.0"
once_cell = "1.18"
futures-util = "0.3.30"
chrono = "0.4.38"
serde = { version = "1.0.204", features = ["derive"] }
time = "0.3.36"
tonic = "0.12"
prost = "0.13"
tokio-stream = "0.1"
arrow = { version = "52.2.0", features = ["prettyprint", "ipc_compression"] }
parquet = "52.2.0"
parquet2 = "0.17.2"
arrow2 = { version = "0.18.0", features = [
    "io_parquet",
    "io_parquet_compression",
] }


[dev-dependencies]
criterion = { version = "0.3.4", features = ["async_tokio"] }

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }

[[bench]]
name = "channel"
harness = false

[[bench]]
name = "ch-sdk"
harness = false

[[bench]]
name = "parquet"
harness = false

# [[bench]]
# name = "bench_arrow"
# harness = false
