[package]
name = "bench_crates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# arrow = "49.0.0"
# arrow2 = "0.18.0"
arrow = { version = "55.2.0", features = ["prettyprint", "ipc_compression"] }
parquet = "55.2.0"
parquet2 = "0.17.2"
arrow2 = { version = "0.18.0", features = [
    "io_parquet",
    "io_parquet_compression",
] }
